--- a/CS50x solutions/week_8/homepage/portfolio.html
+++ b/CS50x solutions/week_8/homepage/portfolio.html
@@ -12,11 +12,10 @@
         <div class="profile-picture">
             <img src="https://th.bing.com/th/id/R.3bbc71ecbba83af659ac0dd95f1418eb?rik=SLTCW8G18nnBvg&pid=ImgRaw&r=0" alt="Profile Picture">
         </div>
-        <h1>Khalid Azaanoun</h1>
+        <h1>yamilobt8</h1>
         <div class="icons">
             <a href="https://github.com/yamilobt8" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/khalid-azaanoun-a0585425b/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/khalid.azaanoun.3" target="_blank"><i class="fab fa-facebook"></i></a>
         </div>
     </section>
 
@@ -33,7 +32,7 @@
             <h3>CS50’s: Introduction to Computer Science</h3>
             <br>
             <p>Session: 2023/2024</p>
-            <p>progress: 80% week_8</p>
+            <p>progress: 100%</p>
             <p>From: Harvard University</p>
             <p>Presenter: professor David J. Malan</p>
         </div>
